@@ -28,30 +28,49 @@
 
           <div class="topnav-container flex-item-centered-vert flex-item-fluid noprint">
             <ul class="topnav-list unstyled mt0 mb0 ml1 flex flex-nowrap">
-                <li class="mr1">
-                    <a href="https://mail.protonmail.com/" class="topnav-link inline-flex flex-nowrap nodecoration rounded"{% if page.pageId != 'settings' %} aria-current="true"{% endif %}>
-                        <svg viewBox="0 0 16 16" class="icon-16p flex-item-noshrink topnav-icon mr0-5 flex-item-centered-vert fill-white" role="img" focusable="false" aria-hidden="true">
-                            <use xlink:href="#shape-mailbox"></use>
-                        </svg>
-                        Mailbox
-                    </a>
-                </li>
-                <li class="mr1">
-                    <a href="/settings/" class="topnav-link inline-flex flex-nowrap nodecoration rounded"{% if page.pageId == 'settings' %} aria-current="true"{% endif %}>
-                        <svg viewBox="0 0 16 16" class="icon-16p flex-item-noshrink topnav-icon mr0-5 flex-item-centered-vert fill-white" role="img" focusable="false" aria-hidden="true">
-                            <use xlink:href="#shape-settings"></use>
-                        </svg>
-                        Settings
-                    </a>
-                </li>
-                <li class="mr1">
-                    <a href="https://github.com/ProtonMail/design-system/" class="topnav-link inline-flex flex-nowrap nodecoration rounded">
-                        <svg viewBox="0 0 16 16" class="icon-16p flex-item-noshrink topnav-icon mr0-5 flex-item-centered-vert fill-white" role="img" focusable="false" aria-hidden="true">
-                            <use xlink:href="#shape-support1"></use>
-                        </svg>
-                        Support
-                    </a>
-                </li>
+              <li class="mr1">
+                <a href="https://mail.protonmail.com/" class="topnav-link inline-flex flex-nowrap nodecoration rounded"{% if page.pageId != 'settings' %} aria-current="true"{% endif %}>
+                  <svg viewBox="0 0 16 16" class="icon-16p flex-item-noshrink topnav-icon mr0-5 flex-item-centered-vert fill-white" role="img" focusable="false" aria-hidden="true">
+                    <use xlink:href="#shape-mailbox"></use>
+                  </svg>
+                  Mailbox
+                </a>
+              </li>
+              <li class="mr1">
+                <a href="/settings/" class="topnav-link inline-flex flex-nowrap nodecoration rounded"{% if page.pageId == 'settings' %} aria-current="true"{% endif %}>
+                  <svg viewBox="0 0 16 16" class="icon-16p flex-item-noshrink topnav-icon mr0-5 flex-item-centered-vert fill-white" role="img" focusable="false" aria-hidden="true">
+                    <use xlink:href="#shape-settings"></use>
+                  </svg>
+                  Settings
+                </a>
+              </li>
+              <li class="mr1">
+                <a href="https://github.com/ProtonMail/design-system/" class="topnav-link inline-flex flex-nowrap nodecoration rounded">
+                  <svg viewBox="0 0 16 16" class="icon-16p flex-item-noshrink topnav-icon mr0-5 flex-item-centered-vert fill-white" role="img" focusable="false" aria-hidden="true">
+                    <use xlink:href="#shape-support1"></use>
+                  </svg>
+                  Support
+                </a>
+              </li>
+              <li class="mlauto mtauto mbauto">
+                <div class="dropDown dropDown--rightArrow inbl">
+                  <button class="increase-surface-click color-white js-dropDown-button inline-flex" type="button">
+                    <span class="alignright">
+                      <span class="bl">Doctor Willy</span>
+                      <span class="bl smaller m0 opacity-30 lh100">willydoctor@protonmail.com</span>
+                    </span>
+                    <svg viewBox="0 0 16 16" class="icon-12p ml0-5 mr0-5 expand-caret mtauto mbauto" role="img" aria-hidden="true" focusable="false">
+                      <use xlink:href="#shape-caret"></use>
+                    </svg>
+                    <span class="mtauto mbauto bordered rounded50 p0-5 inbl opacity-30">DW</span>
+                  </button>
+                  <div class="js-dropDown-content dropDown-content" hidden>
+                    <div class="p1">
+                      Hey, this is a Design System, you can't log out. :)
+                    </div>
+                  </div>
+                </div>
+              </li>
             </ul>
           </div>
 
