@@ -273,6 +273,7 @@ $list-paddings-values: 0, 0.25, 0.5, 0.75, 1, 2 !default; // specify 2.5 if need
 .nonvisible { visibility: hidden; }
 
 .opacity-50 { opacity: .5; }
+.opacity-30 { opacity: .3; }
 
 .hidden, [hidden]  { display: none; } /* hidden everywhere */
 .nodesktop { display: none; } /* hidden on desktop */
