@@ -73,6 +73,7 @@ section: design
 
 <h2>Container with border/shadow</h2>
 
+
 <div class="flex flex-spacebetween mb2 onmobile-flex-column">
   <div class="w49 pt0-5">
     <div class="bordered-container">
@@ -132,6 +133,24 @@ section: design
     <pre class=" language-markup"><code>&lt;div class="border-bottom"&gt;
   &lt;div class="p1"&gt;
     The same container, but only with bottom border.
+  &lt;/div&gt;
+&lt;/div&gt;
+</code></pre>
+  </div>
+</div>
+
+<div class="flex flex-spacebetween mb2 onmobile-flex-column">
+  <div class="w49 pt0-5">
+    <div class="bordered">
+      <div class="p1">
+        Here a classic container without border radius. For special cases, etc.
+      </div>
+    </div>
+  </div>
+  <div class="w49 aligncenter flex-self-vcenter">
+    <pre class=" language-markup"><code>&lt;div class="bordered"&gt;
+  &lt;div class="p1"&gt;
+    Here a classic container without border radius. For special cases, etc.
   &lt;/div&gt;
 &lt;/div&gt;
 </code></pre>
