@@ -1,5 +1,14 @@
 # [1.6.xx] - 2019-06-03
 
+## New 
+
+Logout dropdown
+
+- added it :)
+- added helpers `opacity-30`, `lh100`, `bordered` container
+- commented some stuff (`q` styles)
+
+
 ## Updated/fixes
 
 - updated drop downs (`max-height` limit, plus shadows/etc.)
